# turbo-waffle

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connections.rs  health.rs  launcher.rs  mod.rs  wol.rs
src-tauri/src/models/: connection.rs  health.rs  mod.rs
src-tauri/src/services/: mod.rs  ping.rs  terminal.rs  wol.rs
src-tauri/src/storage/: config.rs
src/assets/styles/: variables.css
src/components/: AppHeader.vue  ConnectionCard.vue  ConnectionForm.vue  ConnectionGrid.vue  HealthIndicator.vue  IconPicker.vue  ToastStack.vue
src/composables/: useConnections.ts  useHealth.ts  useSettings.ts  useToasts.ts
src/types/: connection.ts
