[package]
name = "turbo-waffle"
version = "0.1.0"
description = "Connection manager with health monitoring and Wake-on-LAN"
authors = ["Alex"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "turbo_waffle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
surge-ping = "0.8"
wake-on-lan = "0.2"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
thiserror = "2"
which = "7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
